--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-Hello World, this is Seth winslow
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Seth Winslow</title>
+	<style type="text/css">
+		* {
+			margin:0;
+			padding:0;
+            background:#696969;
+            color:white;
+            font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+            padding: 2px;
+            height: auto;
+            width: auto;
+		}
+        h1 {
+            font-size: 25px;
+			display: block;
+            padding-bottom: 4px;
+		}
+        h3 {
+            font-size: 20px;
+        }
+        h3 a {
+            text-decoration: underline;
+            color: #FF0000 ;
+        }
+		article {
+            width:90%;
+			max-width: 600px;
+			margin:0 auto;
+		}		
+		img {
+			max-width: 200px;
+			display: block;
+			margin: 1em auto;
+		}
+	</style>
+</head>
+<body>
+	<article>
+		<img src="images/Seth%20Winslow.JPG" alt="Picture of Seth Winslow">
+        <center>
+            <h1 ><a href="mailto:swwinslow@gmail.com?Subject=Website Connect" target="_top">Seth Winslow</a></h1>
+            </center>
+		<h3>Hello. I am currently an IDS (Information & Digital Solutions) Analyst at <strong><a href='https://www.lilly.com'>Eli Lilly and Company</a></strong> in Indianapolis. I am the founder of SETH WINSLOW LLC, a freelance company for Websites, Mobile Applications, etc. Thanks for visiting.</h3>
+        <br>
+        <center>
+        <h2><a href='https://emsteiner7.wixsite.com/emilysethcreations'>Photography Needs: Emily & Seth Creations</a></h2>
+</center>
+	</article>
+</body>
+</html>
+
