--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 	<article>
-		<img src="images/SethWinslow.JPG" alt="Picture of Seth Winslow">
+		<img src="images/SethWinslow.jpeg" alt="Picture of Seth Winslow">
         <center>
             <h1 ><a href="mailto:swwinslow@gmail.com?Subject=Website Connect" target="_top">Seth Winslow</a></h1>
             </center>
